--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
+    "@react-three/flex": "^1.0.1",
+    "@react-three/postprocessing": "^2.16.3",
+    "maath": "^0.10.8",
+    "noisejs": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.167.1"
